<resources>
    <string name="app_name" translatable="false">News</string>
    <string name="gazette">gazette</string>
    <string name="news_day">NewsDay</string>
    <string name="home_h">Home</string>
    <string name="profile_h">Profile</string>
    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="news_title">News Title</string>
    <string name="date">Date</string>
    <string name="news_description_goes_here">News description goes here…</string>
    <string name="home">Home</string>
    <string name="communities">Our Community</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="about_us">About Us</string>
    <string name="search_by_city_or_country">Search by city or country…</string>
    <string name="search">Search</string>
    <string name="favorite_news">Favorite News</string>
    <string name="switchButton">ChangeMode</string>
    <string name="author">Author</string>
    <string name="url">Url</string>
    <string name="content">Content</string>
    <string name="detail_news">Detail News</string>
    <string name="about_us_text">
     Welcome to our News and Weather App! Our mission is to keep you informed and connected to the world with real-time news updates and accurate weather information at your fingertips.&#10;&#10;\n
    With this app, you can easily access the latest headlines, and by clicking on the links, you’ll be redirected to reliable sources to read each story in full. Alongside, we offer daily weather insights to help you plan your day, and our search feature allows you to check weather conditions for any country you choose.&#10;&#10;\n
     We’re dedicated to providing a simple and user-friendly experience that helps you stay up-to-date and prepared for whatever the day brings. Thank you for choosing our app, and enjoy exploring the world through news and weather updates with us!
</string>
    <string name="change">Change</string>
    <string name="next">Next</string>
    <string name="everyday_new_ntop_news">Everyday New\nTop News</string>
    <string name="intro_text_2">The ability to view all news with a single touch anywhere</string>
    <string name="intro_text_3">Don\'t forget your daily weather too</string>
    <string name="search_news_by_name">Search news by name</string>
    <string name="news_details">News Details</string>
    <string name="news">News</string>
    <string name="day">Day</string>
    <string name="english">English(en)</string>
    <string name="russian">Russian(ru)</string>
    <string name="spanish">Spanish(es)</string>
    <string name="german">German(de)</string>
    <string name="top_news">Top News</string>
    <string name="our">Our</string>
    <string name="community">Community</string>
    <string name="about">About</string>
    <string name="us">Us</string>
    <string name="bitcoin_home">Bitcoin</string>
    <string name="techcrunch_home">TechCrunch</string>
    <string name="btc_news_news">BTC News</string>
    <string name="tech_crunch_news">Tech Crunch News</string>
    <string name="business">Business</string>
    <string name="usa_news">USA News</string>
    <string name="description">Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>