<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:backgroundTint="@color/background"
    app:cardCornerRadius="15dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/favoritesToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/new_york_small_bold"
                android:text="@string/news_details"
                android:textColor="@color/textColor"
                android:textSize="25sp" />
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/newsAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:backgroundTint="@color/background"
            android:drawablePadding="4dp"
            android:fontFamily="@font/new_york_small_bold"
            android:paddingTop="8dp"
            android:paddingBottom="5dp"
            android:text="@string/author"
            android:textColor="@color/textColor"
            android:textSize="17sp"
            app:drawableStartCompat="@drawable/ic_writer" />

        <ImageView
            android:id="@+id/newsImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/newsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawablePadding="4dp"
            android:fontFamily="@font/new_york_small_bold"
            android:maxLines="2"
            android:paddingTop="8dp"
            android:text="@string/news_title"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_lightblub" />

        <TextView
            android:id="@+id/newsUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:autoLink="web"
            android:drawablePadding="4dp"
            android:maxLines="4"
            android:paddingTop="5dp"
            android:text="@string/url"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_url" />

        <TextView
            android:id="@+id/newsDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:drawablePadding="4dp"
            android:fontFamily="@font/new_york_small_regular"
            android:maxLines="4"
            android:paddingTop="5dp"
            android:text="@string/news_description_goes_here"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_description" />

        <TextView
            android:id="@+id/newsContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:clickable="true"
            android:drawablePadding="4dp"
            android:ellipsize="end"
            android:fontFamily="@font/new_york_small_regular"
            android:maxLines="3"
            android:paddingTop="5dp"
            android:text="@string/content"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_content" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
