<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.profile.AboutUsFragment">

    <ImageButton
        android:id="@+id/backToHome"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_rounded_back_btn"
        android:src="@drawable/back_btn_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/applogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileText1"/>

    <TextView
        android:id="@+id/profileText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/new_york_small_bold"
        android:text="@string/about"
        android:textColor="@color/textColor"
        android:textSize="22sp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/profileImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/new_york_small_bold"
        android:text="@string/us"
        android:textColor="@color/textColor"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileImage"/>

    <TextView
        android:id="@+id/aboutUsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/new_york_small_regular"
        android:padding="22dp"
        android:text="@string/about_us_text"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileText2"/>

</androidx.constraintlayout.widget.ConstraintLayout>