<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/newsAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="7dp"
            android:backgroundTint="@color/background"
            android:drawablePadding="4dp"
            android:fontFamily="@font/new_york_small_bold"
            android:paddingTop="8dp"
            android:paddingBottom="5dp"
            android:text="@string/author"
            android:textColor="@color/textColor"
            android:textSize="17sp"
            app:drawableStartCompat="@drawable/ic_writer" />

        <ImageView
            android:id="@+id/newsImage"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/newsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="8dp"
            android:drawablePadding="4dp"
            android:fontFamily="@font/new_york_small_bold"
            android:maxLines="2"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/news_title"
            android:paddingHorizontal="16dp"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_lightblub" />

        <TextView
            android:id="@+id/newsUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginStart="8dp"
            android:autoLink="web"
            android:drawablePadding="4dp"
            android:maxLines="4"
            android:paddingTop="5dp"
            android:text="@string/url"
            android:textColor="@color/textColor"
            android:paddingHorizontal="16dp"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_url" />

        <TextView
            android:id="@+id/publishedTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="8dp"
            android:drawablePadding="4dp"
            android:paddingHorizontal="16dp"
            android:fontFamily="@font/new_york_small_regular"
            app:drawableStartCompat="@drawable/clock"
            app:drawableTint="@color/grey" />

        <ImageView
            android:id="@+id/favoriteIC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_gravity="end"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_favorite" />
    </LinearLayout>


</androidx.cardview.widget.CardView>