<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.detail.USADetail">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/imageGuideline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.49" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/shapeGuideline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43" />

    <ImageView
        android:id="@+id/newsImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@id/imageGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/red" />

    <ImageButton
        android:id="@+id/backToHome"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/shape_rounded_back_btn"
        android:src="@drawable/back_btn_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/textToSpeech"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/shape_rounded_back_btn"
        android:src="@drawable/text_to_speech_svg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/roundedShapeView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shape_rounded_top_white"
        android:backgroundTint="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/shapeGuideline" />

    <TextView
        android:id="@+id/newsContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:fontFamily="@font/new_york_small_regular"
        android:maxLines="3"
        android:paddingHorizontal="16dp"
        android:paddingTop="25dp"
        android:text="@string/content"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infoLayout" />

    <TextView
        android:id="@+id/newsDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:fontFamily="@font/new_york_small_regular"
        android:maxLines="5"
        android:paddingHorizontal="16dp"
        android:text="@string/description"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newsContent" />

    <LinearLayout
        android:id="@+id/infoLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/shape_rounded_blur"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp"
        app:layout_constraintBottom_toTopOf="@id/roundedShapeView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/roundedShapeView">

        <TextView
            android:id="@+id/newsAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            android:drawablePadding="4dp"
            android:fontFamily="@font/new_york_small_bold"
            android:paddingBottom="3dp"
            android:text="@string/author"
            android:textColor="@color/textColor"
            android:textSize="12sp"
            app:drawableStartCompat="@drawable/ic_writer" />

        <TextView
            android:id="@+id/newsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawablePadding="4dp"
            android:fontFamily="@font/new_york_small_bold"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/news_title"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/publishedTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="5dp"
            android:drawablePadding="4dp"
            android:fontFamily="@font/new_york_small_regular"
            android:textSize="15sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>