<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:backgroundTint="@color/background">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/imageGuideline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.48"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/shapeGuideline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43"/>


    <ImageView
        android:id="@+id/newsImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        tools:background="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/imageGuideline"/>
    
    <View
        android:id="@+id/roundedShapeView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shape_rounded_top_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/shapeGuideline"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <TextView
        android:id="@+id/newsContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="true"
        android:fontFamily="@font/new_york_small_regular"
        android:maxLines="3"
        android:paddingTop="25dp"
        android:paddingHorizontal="16dp"
        android:text="@string/content"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infoLayout"/>



    <LinearLayout
        android:id="@+id/infoLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/shape_rounded_blur"
        android:paddingVertical="16dp"
        android:paddingHorizontal="24dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/roundedShapeView"
        app:layout_constraintBottom_toTopOf="@id/roundedShapeView">

        <TextView
            android:id="@+id/newsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawablePadding="4dp"
            android:fontFamily="@font/new_york_small_bold"
            android:gravity="center"
            android:maxLines="2"
            android:paddingTop="8dp"
            android:text="@string/news_title"
            android:textColor="@color/textColor"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/newsAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:backgroundTint="@color/background"
            android:drawablePadding="4dp"
            android:fontFamily="@font/new_york_small_bold"
            android:paddingTop="8dp"
            android:paddingBottom="5dp"
            android:text="@string/author"
            android:textColor="@color/textColor"
            android:textSize="17sp"/>


    </LinearLayout>



    
</androidx.constraintlayout.widget.ConstraintLayout>
